<resources>
    <string name="app_name">PatheBredaBioscoopApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">Title of list</string>
    <string name="description_text">title of description</string>
    <string name="input_title_text">Input text here</string>
    <string name="input_description_text">Input text here</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="new_review_title">New Review</string>
    <string name="new_review_give_rating">Give a rating</string>
    <string name="new_review_submit">Submit</string>
    <string name="activity_trailer_link">Click to view trailer</string>
    <string name="activity_view_reviews">View reviews</string>
    <string name="activity_write_reviews">Write a review</string>
    <string name="personal_list">Personal list</string>
    <string name="explore_movies">Explore movies</string>
    <string name="popular_movies">Popular movies</string>
    <string name="new_review">New review</string>
    <string name="private_list">Private list</string>
    <string name="public_list">Public_list</string>
    <string name="item_list_placeholder">This is a place holder list</string>
    <string name="review_updating_rating">Rating:  </string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="username">Username:</string>
    <string-array name="sort_type">
        <item>A -> Z</item>
        <item>Z -> A</item>
        <item>Rating high -> low</item>
        <item>Rating low -> high</item>
        <item>Release date new -> old</item>
        <item>Release date old -> new</item>
    </string-array>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_share">Share</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_add">Add</string>
</resources>