<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/tv_make_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_make_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/input_title_text"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:id="@+id/tv_make_list_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_make_list_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/input_description_text"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_private_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_list"
                android:layout_marginLeft="30dp"/>
            <RadioButton
                android:id="@+id/radio_public_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_list"
                android:layout_marginLeft="70dp"/>
        </RadioGroup>
        <Spinner
            android:id="@+id/sp_sort_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="30dp">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp">

       <Button
           android:id="@+id/bt_save_list"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/action_save"/>

        <Button
            android:id="@+id/bt_cancel_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:layout_marginLeft="170dp"/>
    </LinearLayout>

</GridLayout>