<?xml version="1.0" encoding="utf-8"?>
<GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        >
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/grey"
            android:layout_gravity="top"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26dp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Movietitle"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">
                <TextView
                    android:id="@+id/tv_movie_detail_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="genre"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/tv_movie_detail_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12-02-1997"
                    android:textColor="@color/white"
                    android:layout_marginStart="18dp"/>
                <TextView
                    android:id="@+id/tv_movie_detail_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="123"
                    android:textColor="@color/white"
                    android:layout_marginStart="18dp"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_movie_detail_poster_image"
                android:layout_width="190dp"
                android:layout_height="240dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:id="@+id/tv_movie_detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:textSize="14sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/tv_movie_detail_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="30dp"
                    >
                    <TextView
                        android:id="@+id/tv_movie_detail_actor_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:text="actor1"
                        android:layout_gravity="center"
                        />
                    <ImageView
                        android:id="@+id/iv_movie_detail_actor_one"
                        android:layout_width="70dp"
                        android:layout_height="80dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="30dp"
                    >
                    <TextView
                        android:id="@+id/tv_movie_detail_actor_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:text="actor1"
                        android:layout_gravity="center"
                        />
                    <ImageView
                        android:id="@+id/iv_movie_detail_actor_two"
                        android:layout_width="70dp"
                        android:layout_height="80dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="30dp"
                    >
                    <TextView
                        android:id="@+id/tv_movie_detail_actor_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:text="actor1"
                        android:layout_gravity="center"
                        />
                    <ImageView
                        android:id="@+id/iv_movie_detail_actor_three"
                        android:layout_width="70dp"
                        android:layout_height="80dp"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_view_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_trailer_link"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                >
                <Button
                    android:id="@+id/btn_view_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_view_reviews"/>
                <Button
                    android:id="@+id/btn_write_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_write_reviews"
                    android:layout_marginLeft="30dp"
                    />
            </LinearLayout>
    <!--        <androidx.recyclerview.widget.RecyclerView-->
    <!--            android:id="@+id/rv_reviews"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginBottom="30dp"-->
    <!--            android:layout_marginTop="20dp"/>-->
        </LinearLayout>
    </ScrollView>
</GridLayout>
